--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,30 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "system",
-    "moduleResolution": "node",
-    "sourceMap": false,
+    "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
+    "sourceMap": true,
+    "noEmitHelpers": true,
+    "removeComments": true
   },
   "exclude": [
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts",
-    "beta"
-  ]
+    "./node_modules",
+    "./typings/main.d.ts",
+    "./typings/main"
+  ],
+  "filesGlob": [
+    "./src/app/**/*.ts",
+    "./src/platform/**/*.ts",
+    "!./node_modules/**",
+    "./src/custom-typings.d.ts",
+    "./typings/index.d.ts"
+  ],
+  "awesomeTypescriptLoaderOptions": {
+    "resolveGlobs": true,
+    "forkChecker": true
+  },
+  "compileOnSave": false,
+  "buildOnSave": false,
+  "atom": { "rewriteTsconfig": false }
 }
